# Sustainable-Wage-Tool-APIs

./: .gitignore  LICENSE  README.md  __init__.py  conf.py  documentation.html  foodPlans.py  housingCost.py  index.rst  main.py  pyproject.toml  requirements.txt  selfSufficiencyStandard.py  setup.py  test.py
.docs/: conf.py  index.rst
.docs/_build/doctrees/: environment.pickle  jobDataScrapeSEL.doctree  modules.doctree  monthlyBudget.doctree  selfSufficiencyStandard.doctree
.docs/_build/gettext/: index.pot
.docs/_build/html/: .buildinfo  housingCost.html  jobDataScrapeSEL.html  modules.html  monthlyBudget.html  objects.inv  selfSufficiencyStandard.html
.github/workflows/: jekyll-gh-pages.yml  static.yml
Sustainable-Wage-Tool-Data/: __init__.py  setup.py
Sustainable-Wage-Tool-Data/DataFiles/: countiesFIPSCodes.data
Sustainable-Wage-Tool-Data/JobDataFiles/: oe.area
Sustainable-Wage-Tool-Data/scripts/: jobDataScrapeSEL.py  selfSufficiencyStandard.py
doc/: conf.py  index.rst  jobDataScrapeSEL.rst
doc/_build/: index.html
doc/_build/en/: .buildinfo  (+11 more)
doc/_templates/: layout.html
docs/: conf.py
scripts/: employmentDataScrape.py  foodPlans.py  housingCost.py  jobDataScrapeSEL.py  jobdataAPI.py  monthlyBudget.py  selfSufficiencyStandard.py
src/sustainable_wage_tool_data/: __main__.py  foodPlans.py  housingCost.py  jobDataScrapeSEL.py  monthlyBudget.py  selfSufficiencyStandard.py
sustainable_wage_tool_data/: __main__.py  foodPlans.py  housingCost.py  jobDataScrapeSEL.py  selfSufficiencyStandard.py
sustainable_wage_tool_data/JobDataFiles/: .info
(+114 files in other folders)
