[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]


name = "sustainable_wage_tool_data"
authors = [
  { name="Angel Febles"},
]
description = "Automatically retrieves information from the most recent sources for the Sustainable Wage Tool."
readme = "README.md"
version='1.0.1'
requires-python = ">3"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

license = {file = "LICENSE"}

dependencies =[  
        'beautifulsoup4==4.12.3',
        'pdfplumber==0.11.4',
        'polars==1.9.0',
        'Requests==2.32.3',
        'selenium==4.25.0',
        'XlsxWriter==3.2.0',
        'fastexcel',
        'argparse'
    ]

[project.urls]
Homepage = "https://github.com/AngelFebles/Sustainable-Wage-Tool-APIs"
Issues = "https://github.com/AngelFebles/Sustainable-Wage-Tool-APIs/issues"

[tool.setuptools.packages.find]
